2003-04-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* DimeOgre.h/cpp: added a Water Plane at height 0.
	There is also a little ogre head marking (0,0,0).
	The more detailed the scene, the easiest it is
	to spot strange behaviors.
	And it looks cool :)

2003-04-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* MathConverter.h: Point, Vector and Quaternion converter
	for world-centric coordinates (Atlas-wfmath like)
	to/from screen-centric coordinates (Ogre like).
	See file for more info.
	Only point conversion currently, more will come later.
	* Cal3DOgreConverter.h/cpp: model converter.
	Just added files, it is not coded yet.
	* Makefile.am: added Cal3D2Ogre binary file.

2003-04-24 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* components/ogre: big cleanup. Files renamed.
	
2003-04-23 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* DimeOgreFrameListener.h: added this new framelistener
	capable of switching between buffered and immediate modes.

2003-04-19 M Pollard <circlemaster@blueyonder.co.uk>
	* ServerService.cpp, OOGChat.cpp, MetaserverService.cpp,
	  Application.cpp:
	    Update obsolete <strstream> to <sstream>.
	* Application.cpp, Application.h:
	  Sort out init's in headers that don't work anymore.

2003-04-13 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* Configure.ac: created check for wfmath. Moved to PKG_CONFIG checking
	the checks for some libraries.
	* INSTALL: added a quick hack for installing boot under "troubleshooting".
	* src files: fixed some constant string declarations on headers.

2003-01-06 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* OgreApp.cpp/h: dual mode for the GUI: press 'H' to display 
	the GUI and use the mouse to click on it.
	Press 'H' again to hide it and return to fullscreen mouseview.

2003-01-05 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* OgreApp.cpp/h: added basic GUI elements.
	Now OgreApp inherits from ogre::ActionListener
	and ogre::MouseListener
